2009-01-26	Mike Massonnet
Actions are configurable through the settings dialog.

	- panel-plugin/actions.c:
		Fix a crasher in clipman_actions_load() when reading the XML
		file from the user config directory.  Add debug messages when
		loading and saving the XML file.
	- panel-plugin/actions.c(clipman_actions_get_entries):
		New method to retrieve the list of every acion.
	- panel-plugin/actions.c(clipman_actions_remove_command):
		Renamed the method clipman_actions_remove() to
		clipman_actions_remove_command() and re-implement
		clipman_actions_remove() to remove an entry entirely.
	- panel-plugin/settings-dialog.glade:
		Rename some widgets and add signal handlers.
	- panel-plugin/panel-plugin.c:
		Set up the actions dialog in panel_plugin_configure() and a
		add a load of new callbacks and functions specific to the
		settings dialog to add/edit/delete actions.

2009-01-26	Mike Massonnet
Small tweak in the GRegex.

	- panel-plugin/actions.c(clipman_actions_add):
		Add the compile flag "caseless" and move the match option
		"anchored" to the compile flags.
	- configure.ac.in:
		Add GTK+/GLib requirements to 2.10/2.14.

2009-01-25	Mike Massonnet
Forget to add support for GLib < 2.16 to save the actions.

	- panel-plugin/actions.c:
		I somehow was too hasty to commit, and forgot about support
		for GLib < 2.16 to save the actions to the XML file.

2009-01-25	Mike Massonnet
Fix g_debug().

	- Looks like I left some g_debug() calls in the code.

2009-01-25	Mike Massonnet
Actions are saved/loaded to/from an XML file.

	- panel-plugin/actions.c(clipman_actions_load):
		Load actions from an XML file from the user config directory
		or fallback to a system wide config directory.  Drop the
		hard-coded actions.
	- panel-plugin/actions.c(clipman_actions_save):
		Save the actions in an XML format inside the user config
		directory.
	- panel-plugin/actions.c(clipman_actions_add):
		Create the regex with the flag "anchored" to force the regex'