@@ -344,7 +344,7 @@
     <property name="default_height">380</property>
     <property name="destroy_with_parent">True</property>
     <property name="icon_name">system-run</property>
-    <property name="type_hint">normal</property>
+    <property name="type_hint">dialog</property>
     <property name="skip_taskbar_hint">True</property>
     <property name="transient_for">settings-dialog</property>
     <property name="has_separator">False</property>
@@ -586,7 +586,8 @@
     <property name="window_position">center-on-parent</property>
     <property name="destroy_with_parent">True</property>
     <property name="icon_name">system-run</property>
-    <property name="type_hint">normal</property>
+    <property name="type_hint">dialog</property>
+    <property name="skip_taskbar_hint">True</property>
     <property name="transient_for">entry-dialog</property>
     <property name="has_separator">False</property>
     <child internal-child="vbox">
